# Dynamic_Convolution_Plugin

./: .gitignore  CMakeLists.txt  Dynamic_Convolver.jucer  ProjectOutline.md  README.md
Source/: ConvolutionEffects.cpp  ConvolutionEffects.h  Convolver.cpp  Convolver.hpp  DynamicConvolutionEffect.cpp  DynamicConvolutionEffect.h  DynamicConvolver.cpp  DynamicConvolver.h  DynamicConvolver.hpp  DynamicConvolverV2.cpp  DynamicConvolverV2.h  Graphics.cpp  Graphics.h  Graphics.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: FileHighlight.cpp  FileHighlight.h  GUIComponents.cpp  GUIComponents.h  Graphics.cpp  Graphics.h
